<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.pingidentity.oss</groupId>
    <packaging>jar</packaging>
    <artifactId>java10-token-binding-negotiation</artifactId>
    <name>Token Binding Negotiation for Java 10</name>
    <version>1.0.0.v2-SNAPSHOT</version>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.10</source>
                    <target>1.10</target>
                    <compilerArgs>
                      <!-- from https://medium.com/codefx-weekly/java-9-maven-compile-errors-module-names-kill-switches-73411c511750
                             <arg> will put arguments that contain a space into quotes before
                            passing them, which javac doesn't like,
                            so you'll have to do this
                            <arg>-add-exports</arg><arg>java.base/sun.security.util=ALL-UNNAMED</arg>
                            instead of this
                            <arg>-add-exports java.base/sun.security.util=ALL-UNNAMED</arg>
                            or you'll get invalid flag: -add-exports java.base/sun.security.util=ALL-UNNAMED
                      -->
                      <arg>--add-exports</arg><arg>java.base/sun.security.ssl=ALL-UNNAMED</arg>
                      <arg>--add-exports</arg><arg>java.base/sun.security.util=ALL-UNNAMED</arg>
                      <arg>--add-exports</arg><arg>java.base/com.sun.net.ssl.internal.ssl=ALL-UNNAMED</arg>
                      <arg>--add-exports</arg><arg>java.base/sun.security.jca=ALL-UNNAMED</arg>
                      <arg>--add-exports</arg><arg>java.base/sun.net.util=ALL-UNNAMED</arg>
                      <arg>--add-exports</arg><arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                      <arg>--add-exports</arg><arg>java.base/sun.security.internal.interfaces=ALL-UNNAMED</arg>
                      <arg>--add-exports</arg><arg>java.base/sun.security.provider.certpath=ALL-UNNAMED</arg>
                      <arg>--add-exports</arg><arg>java.base/sun.security.internal.spec=ALL-UNNAMED</arg>
                      <arg>--add-exports</arg><arg>java.base/sun.security.validator=ALL-UNNAMED</arg>
                      <arg>--add-exports</arg><arg>java.base/sun.security.action=ALL-UNNAMED</arg>
                      <arg>--add-exports</arg><arg>java.base/sun.security.x509=ALL-UNNAMED</arg>

                      <!-- this arg syntax from the 1st comment at https://issues.apache.org/jira/browse/MCOMPILER-311
                       and patch using src from https://stackoverflow.com/questions/36270671/how-to-patch-openjdk-9-with-jigsaw-integrated-->
                      <arg>--patch-module=java.base=${basedir}/src/main/java</arg>

                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                  <argLine>
                    --add-exports java.base/sun.security.ssl=ALL-UNNAMED --patch-module java.base=${basedir}/target/classes -Djavax.net.debug=ssl,handshake,session
                  </argLine>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.7.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.8.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>2.5.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.0.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.5.3</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-scm-plugin</artifactId>
                    <version>1.9.5</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.0.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.21.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.javadoc.skip>true</maven.javadoc.skip>
  </properties>

  <scm>
    <connection>scm:git:https://github.com/pingidentity/java10-token-binding-negotiation.git</connection>
    <developerConnection>scm:git:git@github.com:pingidentity/java10-token-binding-negotiation.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/pingidentity/java10-token-binding-negotiation</url>
  </scm>

  <distributionManagement>
    <repository>
      <id>maven-repository-on-filesystem</id>
      <url>file:///${basedir}/target/pseudo-deploy</url>
    </repository>
  </distributionManagement>

</project>
